<resources>
    <string name="app_name">sharecharge</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="user">用户</string>
    <string name="share_charge">Share Charge</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="account">用户</string>
    <string name="logout">Logout</string>
    <string name="email">邮箱</string>
    <string name="repeat_password">重复密码</string>
    <string name="tel">手机</string>
    <string name="school_id">学号</string>
    <string name="host2">http://192.168.1.108:5000</string>
    <string name="host">http://www.armyja.cn:5000</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
</resources>
